CSS fixes: adjusts title card CSS max-width and important flag to fill 320px of a mobile screen on the home view, but 100px when seeing a project detail view. This causes the title card to shrink and expand so both are visible on a detail view

--- a/src/components/TitleCard/titlecard.css
+++ b/src/components/TitleCard/titlecard.css
@@ -14,7 +14,7 @@
 }
 
 .title-card {
-  max-width: 400px;
+  max-width: 320px !important;
   margin-top: 10rem;
   padding: 1%;
   color: white;
@@ -33,6 +33,7 @@
 @media screen and (max-width: 640px) {
   .title-card {
     margin-top: 0rem;
+    max-width: 320px;
     height: auto;
   }
 
